# location-switch

./: LICENSE  README.md  config.py  location-switch.postman_collection.json  makefile  pyproject.toml
.github/workflows/: deploy-page.yaml
client/: .gitignore  index.html  package.json
client/src/: App.vue  config.js  main.js
client/src/api/: user.js
client/src/components/: MapView.vue  SideBar.vue
client/src/router/: index.js
client/src/store/: index.js
client/src/store/modules/: myself.js  users.js
client/src/utils/: keyevent.js  socket.js
client/src/views/: HomeView.vue  RegisterView.vue
endpoints/: user.py
schemas/: user.py
server/: app.py
server/endpoints/: user.py
server/models/: __init__.py  checkIn.py  user.py
server/schemas/: __init__.py  checkIn.py  user.py
server/static/: index.py
